Fix z-index issue on plotly modebar

--- a/thunorweb/webpack/thunorweb/css/pyhts.css
+++ b/thunorweb/webpack/thunorweb/css/pyhts.css
@@ -634,6 +634,9 @@ user-select: none;}
 #plot-toolbar .dropdown-menu {
     z-index: 2000;
 }
+.plot-panel .dropdown-menu {
+    z-index: 1002;
+}
 .hts-change-data {
     display: none;
     position: absolute;
